# waste-bill-parser

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
backend/: app.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/extract/: route.ts
frontend/app/api/parse/: route.ts
frontend/components/: FieldConfig.tsx  PDFViewer.tsx  ResultsEditor.tsx
frontend/lib/: constants.ts  db.ts  utils.ts
